<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">COMP90017_Assignment</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="frequency">Frequency</string>
    <string name="Play">Play</string>
    <string name="title_activity_launch">COMP90017 Assignment</string>
    <string name="subject_name">COMP90017: Sensor Networks and Applications</string>
    <string name="assignment_name">Assignment 1: Application</string>
    <string name="emitter">Emitter</string>
    <string name="listener">Listener</string>
    <string name="graph_test">Graph Test</string>
    <string name="lt">&lt;</string>
    <string name="gt">&gt;</string>
    <string name="filler">unk</string>
    <string name="duration">Duration</string>
    <string name="play_pulse">Play Pulse</string>
    <string name="team_members">Aniruddh Fichadia (569005), Ryan Leong (395463), Chaoheng Hu (630839)</string>
    <string name="title_activity_emitter">EmitterActivity</string>
    <string name="pulse_count">Pulse Count</string>

    <string-array name="pulse_counts">
        <item name="2">2</item>
        <item name="5">5</item>
        <item name="10">10</item>
    </string-array>
    <string-array name="listener_ids">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="x_axis">X-Axis</string>
    <string name="y_axis">Y-Axis</string>
    <string name="z_axis">z-Axis</string>
    
    <string name="listener_id">Listener ID</string>
    
    <string name="accelerometer">Accelerometer</string>
    
    <string name="listener_id_prompt">Choose a unique ID for your listener</string>
    <string name="title_activity_listener">ListenerActivity</string>
    <string name="title_activity_graph_test">GraphTest</string>
    <string name="title_activity_graph">GraphActivity</string>

</resources>