<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dip"
        android:text="@string/accelerometer"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dip"
        android:stretchColumns="*" >

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/x_axis"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/y_axis"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/z_axis"
                android:textSize="14sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/x_axis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <TextView
                android:id="@+id/y_axis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <TextView
                android:id="@+id/z_axis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listener_id" />

    <Spinner
        android:id="@+id/listener_id_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/listener_ids"
        android:prompt="@string/listener_id_prompt" />

    <Button
        android:id="@+id/setupBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Setup" />

    <Button
        android:id="@+id/TrackEmitterBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Track Emitter" />

    <Button
        android:id="@+id/queryBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Query" />

    <com.comp90017.teamA.assignment.Graph.GraphView
        android:id="@+id/testGraphView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" />

    <!-- <ImageView -->
    <!-- android:id="@+id/image" -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_gravity="center" -->
    <!-- android:paddingTop="10dip" -->
    <!-- android:visibility="invisible" /> -->

</LinearLayout>