<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EmitterActivity" >

    <Button
        android:id="@+id/freqLessButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:text="@string/lt" />

    <Button
        android:id="@+id/freqMoreButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/freqLessButton"
        android:layout_alignBottom="@+id/freqLessButton"
        android:layout_alignParentRight="true"
        android:text="@string/gt" />

    <SeekBar
        android:id="@+id/freqSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/freqLessButton"
        android:layout_toLeftOf="@+id/freqMoreButton"
        android:layout_toRightOf="@+id/freqLessButton"
        android:max="200"
        android:progress="10" />

    <TextView
        android:id="@+id/freqTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignRight="@+id/freqMoreButton"
        android:text="@string/filler" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/freqLessButton"
        android:layout_below="@+id/freqLessButton"
        android:text="@string/frequency" />

    <Button
        android:id="@+id/durLessButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:text="@string/lt" />

    <Button
        android:id="@+id/durMoreButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/durLessButton"
        android:layout_alignBottom="@+id/durLessButton"
        android:layout_alignRight="@+id/freqTV"
        android:text="@string/gt" />

    <SeekBar
        android:id="@+id/durSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/durLessButton"
        android:layout_toLeftOf="@+id/durMoreButton"
        android:layout_toRightOf="@+id/durLessButton"
        android:max="20"
        android:progress="2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/durLessButton"
        android:layout_below="@+id/durLessButton"
        android:text="@string/duration" />

    <TextView
        android:id="@+id/durTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignRight="@+id/durMoreButton"
        android:text="@string/filler" />

    <Button
        android:id="@+id/playPulseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/playButton"
        android:layout_alignBottom="@+id/playButton"
        android:layout_alignRight="@+id/durTV"
        android:text="@string/play_pulse" />

    <TextView
        android:id="@+id/timerTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/playPulseButton"
        android:layout_below="@+id/playPulseButton"
        android:text="@string/filler" />

    <SeekBar
        android:id="@+id/pulseCountSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:max="8"
        android:progress="3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pulseCountSeekBar"
        android:layout_below="@+id/pulseCountSeekBar"
        android:text="@string/pulse_count" />

    <TextView
        android:id="@+id/pulseCountTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignRight="@+id/pulseCountSeekBar"
        android:text="@string/filler" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/textView3"
        android:text="@string/Play" />

</RelativeLayout>